k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: abhaykumar255/professional-system_api-gateway
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 600Mi
              cpu: 300m
            requests:
              memory: 300Mi
              cpu: 150m
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          ports:
            - containerPort: 9000
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  annotations:
    cloud.google.com/backend-config: '{"default": "api-gateway-backend-config"}'
spec:
  selector:
    app: api-gateway
  ports:
    - port: 9000
      targetPort: 9000
  type: ClusterIP
