k8s/connection-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connection-service
  labels:
    app: connection-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connection-service
  template:
    metadata:
      labels:
        app: connection-service
    spec:
      containers:
        - name: connection-service
          image: abhaykumar255/professional-system_connection-service
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 400Mi
              cpu: 200m
            requests:
              memory: 200Mi
              cpu: 50m
          ports:
            - containerPort: 9030
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: connection-service
spec:
  type: ClusterIP
  selector:
    app: connection-service
  ports:
    - port: 80
      targetPort: 9030
