k8s/connections-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: connections-db
  labels:
    app: connections-db
spec:
  serviceName: connections-db # Same as the name in application.properties of connection-service
  replicas: 1
  selector:
    matchLabels:
      app: connections-db
  template:
    metadata:
      labels:
        app: connections-db
    spec:
      containers:
        - name: connections-db
          image: neo4j:latest
          resources:
            limits:
              memory: 1Gi
              cpu: 500m
            requests:
              memory: 512Mi
              cpu: 200m
          ports:
            - containerPort: 7474
              name: http
            - containerPort: 7687
              name: bolt
          volumeMounts:
            - name: connections-db-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: connections-db-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: standard-rwo
        volumeMode: Filesystem

---
apiVersion: v1
kind: Service
metadata:
  name: connections-db
spec:
  clusterIP: None
  ports:
    - name: http
      port: 7474
      targetPort: 7474
    - name: bolt
      port: 7687
      targetPort: 7687
  selector:
    app: connections-db
