k8s/kafka-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: ghcr.io/kafbat/kafka-ui
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  annotations:
    cloud.google.com/backend-config: '{"default": "kafka-ui-backend-config"}'
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
