k8s/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.15.1
          resources:
            limits:
              memory: 1Gi
              cpu: 500m
            requests:
              memory: 512Mi
              cpu: 50m
          ports:
            - containerPort: 5601
              name: kibana
          volumeMounts:
            - name: kibana-config
              mountPath: /usr/share/kibana/config/kibana.yml
              subPath: kibana.yml
          livenessProbe:
            httpGet:
              path: /kibana/api/status
              port: 5601
            initialDelaySeconds: 120
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /kibana/api/status
              port: 5601
            initialDelaySeconds: 60
            periodSeconds: 10
      volumes:
        - name: kibana-config
          configMap:
            name: kibana-config

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  annotations:
    cloud.google.com/backend-config: '{"default": "kibana-backend-config"}'
spec:
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
  type: ClusterIP
