k8s/notifications-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notifications-db
  labels:
    app: notifications-db
spec:
  serviceName: notifications-db # Same as the name in application.properties of notification-service
  replicas: 1
  selector:
    matchLabels:
      app: notifications-db
  template:
    metadata:
      labels:
        app: notifications-db
    spec:
      containers:
        - name: notifications-db
          image: postgres:16
          resources:
            limits:
              memory: 200Mi
              cpu: 200m
            requests:
              memory: 100Mi
              cpu: 50m
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: notifications-db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: notifications-db-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: standard-rwo
        volumeMode: Filesystem

---
apiVersion: v1
kind: Service
metadata:
  name: notifications-db
spec:
  clusterIP: None
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: notifications-db
