k8s/posts-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: posts-db
  labels:
    app: posts-db
spec:
  serviceName: posts-db # Same as the name in application.properties of post-service
  replicas: 1
  selector:
    matchLabels:
      app: posts-db
  template:
    metadata:
      labels:
        app: posts-db
    spec:
      containers:
        - name: posts-db
          image: postgres:16
          resources:
            limits:
              memory: 200Mi
              cpu: 200m
            requests:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: posts-db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: posts-db-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: standard-rwo
        volumeMode: Filesystem

---
apiVersion: v1
kind: Service
metadata:
  name: posts-db
spec:
  clusterIP: None
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: posts-db
