k8s/posts-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service
  labels:
    app: posts-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      name: posts-service
      labels:
        app: posts-service
    spec:
      containers:
        - name: posts-service
          image: abhaykumar255/professional-system_posts-service
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 400Mi
              cpu: 200m
            requests:
              memory: 200Mi
              cpu: 100m
          ports:
            - containerPort: 9010
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9010
  selector:
    app: posts-service
