k8s/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  labels:
    app: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:latest
          resources:
            limits:
              memory: 512Mi
              cpu: 300m
            requests:
              memory: 256Mi
              cpu: 150m
          ports:
            - containerPort: 9411
              name: zipkin
          livenessProbe:
            httpGet:
              path: /health
              port: 9411
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 9411
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  annotations:
    cloud.google.com/backend-config: '{"default": "zipkin-backend-config"}'
spec:
  type: ClusterIP
  selector:
    app: zipkin
  ports:
    - port: 9411
      targetPort: 9411
